--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "npm run build"
+  command = "cp static/config.yml static/admin && npm run build"
   functions = "netlify/functions"
   publish = "build"
 
