--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -12,13 +12,11 @@ collections:
   label: "docs"
   folder: docusaurus/docs
   identifier_field: title
-  extension: md
+  extension: mdx
+  format: frontmatter
   widget: "list"
   create: true
   slug: "{{slug}}"
-  nested:
-      depth: 2 # max depth to show in the collection tree
-      summary: '{{title}}' # optional summary for a tree node, defaults to the inferred title field
   fields:
     - { name: title, label: Title, widget: string }
     - { name: body, label: Body, widget: markdown }
