add subfolder collections

--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -21,6 +21,32 @@ collections:
     - { name: title, label: Title, widget: string }
     - { name: body, label: Body, widget: markdown }
     - { name: slug, label: Slug, widget: string }
+- name: docs-basics
+  label: "docs basics"
+  folder: docusaurus/docs/tutorial-basics
+  identifier_field: title
+  extension: md
+  format: frontmatter
+  widget: "list"
+  create: true
+  slug: "{{slug}}"
+  fields:
+    - { name: title, label: Title, widget: string }
+    - { name: body, label: Body, widget: markdown }
+    - { name: slug, label: Slug, widget: string }
+- name: docs-extras
+  label: "docs extras"
+  folder: docusaurus/docs/tutorial-extras
+  identifier_field: title
+  extension: md
+  format: frontmatter
+  widget: "list"
+  create: true
+  slug: "{{slug}}"
+  fields:
+    - { name: title, label: Title, widget: string }
+    - { name: body, label: Body, widget: markdown }
+    - { name: slug, label: Slug, widget: string }
 - name: blog
   label: "blog"
   folder: docusaurus/blog
