--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -8,8 +8,8 @@ media_folder: "docusaurus/static/img"
 public_folder: "/img/"
 
 collections:
-- name: docs
-  label: "docs"
+- name: tutorial
+  label: "tutorial"
   folder: docusaurus/docs
   identifier_field: title
   extension: mdx
@@ -21,8 +21,8 @@ collections:
     - { name: title, label: Title, widget: string }
     - { name: body, label: Body, widget: markdown }
     - { name: slug, label: Slug, widget: string }
-- name: docs-basics
-  label: "docs basics"
+- name: grammar
+  label: "Tutorial - Grammar"
   folder: docusaurus/docs/grammar
   identifier_field: title
   extension: mdx
