--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -8,52 +8,63 @@ media_folder: "docusaurus/static/img"
 public_folder: "/img/"
 
 collections:
-- name: tutorial
-  label: "tutorial"
-  folder: docusaurus/docs
-  identifier_field: title
-  extension: mdx
-  format: frontmatter
-  widget: "list"
-  create: true
-  slug: "{{slug}}"
-  fields:
-    - { name: title, label: Title, widget: string }
-    - { name: body, label: Body, widget: markdown }
-    - { name: slug, label: Slug, widget: string }
-- name: grammar
-  label: "Tutorial - Grammar"
-  folder: docusaurus/docs/grammar
-  identifier_field: title
-  extension: mdx
-  format: frontmatter
-  widget: "list"
-  create: true
-  slug: "{{slug}}"
-  fields:
-    - { name: title, label: Title, widget: string }
-    - { name: body, label: Body, widget: markdown }
-    - { name: slug, label: Slug, widget: string }
-- name: blog
-  label: "blog"
-  folder: docusaurus/blog
-  identifier_field: title
-  extension: md
-  widget: "list"
-  create: true
-  slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-  fields:
-    - { name: title, label: Title, widget: string }
-    - { name: body, label: Body, widget: markdown }
-    - { name: slug, label: Slug, widget: string }
-    - label: "Tags"
-      name: "tags"
-      widget: "list"
-    - label: "Authors"
-      name: "authors"
-      widget: "list"
-      fields:
-        - { name: name, label: Name, widget: string }
-        - { name: title, label: Title, widget: string }
-        - { name: url, label: URL, widget: string }
-        - { name: imageUrl, label: ImageURL, widget: string }
+  - name: about
+    label: "about us"
+    folder: docusaurus/src/pages
+    identifier_field: title
+    extension: mdx
+    format: frontmatter
+    widget: "list"
+    create: false
+    fields:
+      - { name: title, label: Title, widget: string }
+      - { name: body, label: Body, widget: markdown }
+  - name: tutorial
+    label: "tutorial"
+    folder: docusaurus/docs
+    identifier_field: title
+    extension: mdx
+    format: frontmatter
+    widget: "list"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { name: title, label: Title, widget: string }
+      - { name: body, label: Body, widget: markdown }
+      - { name: slug, label: Slug, widget: string }
+  - name: grammar
+    label: "Tutorial - Grammar"
+    folder: docusaurus/docs/grammar
+    identifier_field: title
+    extension: mdx
+    format: frontmatter
+    widget: "list"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { name: title, label: Title, widget: string }
+      - { name: body, label: Body, widget: markdown }
+      - { name: slug, label: Slug, widget: string }
+  - name: blog
+    label: "blog"
+    folder: docusaurus/blog
+    identifier_field: title
+    extension: md
+    widget: "list"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields:
+      - { name: title, label: Title, widget: string }
+      - { name: body, label: Body, widget: markdown }
+      - { name: slug, label: Slug, widget: string }
+      - label: "Tags"
+        name: "tags"
+        widget: "list"
+      - label: "Authors"
+        name: "authors"
+        widget: "list"
+        fields:
+          - { name: name, label: Name, widget: string }
+          - { name: title, label: Title, widget: string }
+          - { name: url, label: URL, widget: string }
+          - { name: imageUrl, label: ImageURL, widget: string }
