--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -45,6 +45,12 @@ collections:
       - { name: title, label: Title, widget: string }
       - { name: body, label: Body, widget: markdown }
       - { name: slug, label: Slug, widget: string }
+      - {
+          name: sidebar_position,
+          label: "Sidebar Position",
+          widget: number,
+          value_type: int,
+        }
   - name: blog
     label: "blog"
     folder: docusaurus/blog
