--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -10,7 +10,7 @@ public_folder: "/img/"
 collections:
   - name: about
     label: "about us"
-    folder: docusaurus/src/pages
+    folder: docusaurus/src/pages/about
     identifier_field: title
     extension: mdx
     format: frontmatter
@@ -32,6 +32,12 @@ collections:
       - { name: title, label: Title, widget: string }
       - { name: body, label: Body, widget: markdown }
       - { name: slug, label: Slug, widget: string }
+      - {
+          name: sidebar_position,
+          label: "Sidebar Position",
+          widget: number,
+          value_type: int,
+        }
   - name: grammar
     label: "Tutorial - Grammar"
     folder: docusaurus/docs/grammar
