--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -80,3 +80,16 @@ collections:
           - { name: title, label: Title, widget: string }
           - { name: url, label: URL, widget: string }
           - { name: imageUrl, label: ImageURL, widget: string }
+  - name: dictionary
+    label: "Hebrew Dictionary"
+    files:
+      - label: "Hebrew Dictionary"
+        name: "dictionaryjson"
+        file: "docusaurus/src/components/Hebrew/nonbinary-hebrew-dictionary.json"
+        fields:
+          - label: Translations
+            name: translations
+            widget: list
+            fields:
+              - { label: Lemma, name: lemma, widget: string }
+              - { label: Def, name: def, widget: string }
