cms: dict summaries

--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -90,6 +90,7 @@ collections:
           - label: Translations
             name: translations
             widget: list
+            summary: "{{lemma}} {{def}}"
             fields:
               - { label: Definition, name: def, widget: string }
               - { label: Lemma, name: lemma, widget: string }
