--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -90,6 +90,7 @@ collections:
           - label: Translations
             name: translations
             widget: list
+            add_to_top: true
             summary: "{{lemma}} {{def}}"
             fields:
               - { label: Definition, name: def, widget: string }
