--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,21 +5,19 @@ name: Test Workflow
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 18.x
-        cache: 'npm'
-    - run: |
-        cd docusaurus
-        npm run build
+      - uses: actions/checkout@v4
+      - run: cd docusaurus
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: "npm"
+      - run: npm run build
