--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,4 +23,5 @@ jobs:
           node-version: 18.x
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
+      - run: npm ci
       - run: npm run build
