--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -88,6 +88,13 @@ collections:
           label: Body,
           widget: markdown,
         }
+      - {
+          label: "Manual PDF",
+          name: "manual_pdf",
+          widget: "file",
+          default: "/uploads/general-manual.pdf",
+          media_library: { config: { multiple: true } },
+        }
       - { name: slug, label: Slug, widget: string }
       - label: "Tags"
         name: "tags"
