--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -20,7 +20,7 @@ collections:
       - { name: title, label: Title, widget: string }
       - {
           name: body,
-          hint: "For hebrew blocks, use <HB> צ </HB>. For multi-line hebrew, do not put hebrew on the same line as <HB> or </HB>.",
+          hint: "For hebrew blocks, use <HB> צ </HB>. Multi-lin hebrew blocks are not supported.",
           label: Body,
           widget: markdown,
         }
@@ -38,7 +38,7 @@ collections:
       - { name: title, label: Title, widget: string }
       - {
           name: body,
-          hint: "For hebrew blocks, use <HB> צ </HB>. For multi-line hebrew, do not put hebrew on the same line as <HB> or </HB>.",
+          hint: "For hebrew blocks, use <HB> צ </HB>. Multi-lin hebrew blocks are not supported.",
           label: Body,
           widget: markdown,
         }
@@ -61,7 +61,7 @@ collections:
       - { name: title, label: Title, widget: string }
       - {
           name: body,
-          hint: "For hebrew blocks, use <HB> צ </HB>. For multi-line hebrew, do not put hebrew on the same line as <HB> or </HB>.",
+          hint: "For hebrew blocks, use <HB> צ </HB>. Multi-lin hebrew blocks are not supported.",
           label: Body,
           widget: markdown,
         }
