--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -53,7 +53,7 @@ collections:
     label: "Applied Uses"
     folder: docusaurus/blog
     identifier_field: title
-    extension: md
+    extension: mdx
     widget: "list"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
