--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -22,6 +22,7 @@
     "hebrew-transliteration": "^2.7.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
