--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -75,12 +75,12 @@ collections:
           hint: "Only add PDF-type files. Use <PdfViewer frontMatter={frontMatter} /> to embed the PDF in the body.",
         }
       - {
-          label: "PDF Files",
-          name: "pdf_files",
+          label: "Additional Files",
+          name: "additional_files",
           widget: "file",
           required: false,
           media_library: { config: { multiple: true } },
-          hint: "Only add PDF-type files. Use <PdfViewer frontMatter={frontMatter} /> to embed the PDFs in the body.",
+          hint: "Use <Files frontMatter={frontMatter} /> to link the files in the body.",
         }
       - { name: slug, label: Slug, widget: string }
       - label: "Tags"
