--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/preset-classic": "3.7",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "docusaurus-lunr-search": "^3.6.0",
     "hebrew-transliteration": "^2.7.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
