--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -24,7 +24,8 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-cookie": "^7.2.2",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.7",
