--- a/docusaurus/static/config.yml
+++ b/docusaurus/static/config.yml
@@ -138,7 +138,7 @@ collections:
   - name: config
     label: "Configuration"
     files:
-      - label: "Dropdowns"
+      - label: "Nav Bar Dropdowns"
         name: "dropdownconfig"
         file: "docusaurus/config/dropdowns.json"
         fields:
